# RetroFan

./: CMakeLists.txt  CMakeSettings.json  Isometrc.cpp  Isometrc.hpp  LDL_Img.cpp  LDL_Iso.cpp  LDL_Pal.cpp  LDL_Win.cpp  README.md  main.cpp  syscall.s  wWin.cpp  xWin.cpp  xcbWin.cpp
Fallout/: Fallout.cpp  PalLoad.cpp  PalLoad.hpp  Sprite.cpp  Sprite.hpp
LDL/include/LDL/: BaseRndr.hpp  BaseWin.hpp  Color.hpp  ColorKey.hpp  Enums.hpp  Eventer.hpp  Events.hpp  LDL.hpp  Palette.hpp  PixConv.hpp  Render.hpp  Result.hpp  RngBuf.hpp  Support.hpp  Surface.hpp  Texture.hpp  Vec2.hpp  Window.hpp
LDL/include/LDL/Renders/: BufPRndr.hpp  BufPTex.hpp  BufRndr.hpp  BufTex.hpp
LDL/include/LDL/UNIX/: MainWin.hpp  XLibRndr.hpp  XLibTex.hpp
LDL/include/LDL/UNIX/Wayland/: MainWin.hpp  WaylandRndr.hpp  WaylandTex.hpp
LDL/include/LDL/UNIX/XLib/: XLibRndr.hpp  XLibTex.hpp  XLibWin.hpp
LDL/include/LDL/UNIX/Xcb/: XcbRndr.hpp  XcbTex.hpp  XcbWin.hpp
LDL/include/LDL/Win16/: GdiPRndr.hpp  GdiPTex.hpp  GdiRndr.hpp  GdiTex.hpp  GdiUtils.hpp  MainWin.hpp  Win16.hpp  WinError.hpp
LDL/include/LDL/Windows/: BufWin.hpp  GdiPRndr.hpp  GdiPTex.hpp  GdiRndr.hpp  GdiTex.hpp  GdiUtils.hpp  MainWin.hpp  Win32.hpp  WinError.hpp
LDL/source/: BaseRndr.cpp  BaseWin.cpp  ColorKey.cpp  Eventer.cpp  Palette.cpp  PixConv.cpp  Result.cpp  Surface.cpp
LDL/source/Renders/: BufRndr.cpp  BufTex.cpp
LDL/source/UNIX/: MainWin.cpp  XLibRndr.cpp
LDL/source/UNIX/Wayland/: MainWin.cpp  WaylandRndr.cpp  WaylandTex.cpp
LDL/source/UNIX/XLib/: XLibRndr.cpp  XLibTex.cpp  XLibWin.cpp
LDL/source/UNIX/Xcb/: XcbRndr.cpp  XcbTex.cpp  XcbWin.cpp
LDL/source/Win16/: GdiPRndr.cpp  GdiPTex.cpp  GdiRndr.cpp  GdiTex.cpp  GdiUtils.cpp  MainWin.cpp  WinError.cpp
LDL/source/Windows/: BufWin.cpp  GdiPRndr.cpp  GdiPTex.cpp  GdiRndr.cpp  GdiTex.cpp  GdiUtils.cpp  MainWin.cpp  WinError.cpp
WinApi/: Consts.hpp  Funcs.hpp  Inlines.hpp  Macros.hpp  Structs.hpp  Types.hpp  WinAPI.hpp  Windows.h
libc/: stdio.cpp  stdlib.cpp  string.cpp
libc/DOS/: Init.cpp  Init.hpp  Portable.cpp  Portable.h
libc/UNIX/: Init.cpp  Init.hpp  Portable.cpp  Portable.h  syscalls.cpp  syscalls.hpp  x86_32.s
libc/Windows/: Init.cpp  Init.hpp  Portable.cpp  Portable.h  WinAPI.hpp
libc/include/: stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libcpp/: new.cpp
libcpp/include/: new  string  string.hpp
make/: Clear.bat  LDL_Win_msvc2022_x86_32.bat  OpenWatcomWin16.bat  bcb6.0.bat  msvc2022_x86_32.bat  msvc2022_x86_32_nostdlib.bat  msvc2022_x86_64.bat  msvc2022_x86_64_nostdlib.bat  start.bat  vc2.bat  vc4.bat  vc5.bat  vc6.bat
old/: CMakeLists.txt
support/: stdint.h  string  string.hpp
